--- a/index.html
+++ b/index.html
@@ -45,12 +45,12 @@
     }
   </style>
 </head>
-<body class="up">
-  <div class="status-container up">
+<body class="down">
+  <div class="status-container down">
     <div class="label">Server Status</div>
-    <div class="status">Up</div>
-    <!-- If server is down, replace above with -->
-    <!-- <div class="status down">Down</div> -->
+    <div class="status down">Down</div>
+    <div class="down">503</div>
+    <div class="down">ERR_BAD_RESPONSE</div>
   </div>
 </body>
 </html>
